--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -4,5 +4,6 @@
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
+    android:layout_marginBottom="35dp"
     android:layout_height="match_parent"
     tools:context=".maps.MapsFragment" />
