update hardcore text

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,7 +32,7 @@
                 android:fontFamily="@font/roboto"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:text="Periode Minggu"
+                android:text="@string/periode_minggu"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/old_green"
-                android:text="Cari"
+                android:text="@string/cari"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_cari"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_cari" />
