--- a/app/src/main/res/layout/fragment_recapitulation.xml
+++ b/app/src/main/res/layout/fragment_recapitulation.xml
@@ -61,7 +61,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto"
-                    android:text="Cari"
+                    android:text="@string/cari"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:backgroundTint="@color/old_green"
@@ -163,7 +163,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/old_green"
-                android:text="SMS"
+                android:text="@string/sms"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="@+id/btn_wa"
                 app:layout_constraintStart_toStartOf="@+id/btn_wa"
@@ -174,7 +174,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/old_green"
-                android:text="WhatsApp"
+                android:text="@string/whatsapp"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="@+id/tv_format_laporan"
                 app:layout_constraintStart_toStartOf="@+id/tv_format_laporan"
