--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:hint="kode"
+            android:hint="@string/kode"
             app:layout_constraintEnd_toEndOf="@+id/text_input_layout"
             app:layout_constraintStart_toStartOf="@+id/text_input_layout"
             app:layout_constraintTop_toBottomOf="@+id/text_input_layout">
