--- a/app/src/main/res/layout/activity_add_data.xml
+++ b/app/src/main/res/layout/activity_add_data.xml
@@ -90,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:hint="Masukan Jumlah Penderita"
+        android:hint="@string/masukan_jumlah_penderita"
         android:inputType="number"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/sp_penyakit"
@@ -124,7 +124,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Data Terbaru"
+            android:text="@string/data_terbaru"
             android:backgroundTint="@color/grey"
             android:textSize="18sp"
             android:fontFamily="@font/roboto_regular"
