--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -3,56 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="130dp">
+    android:layout_height="410dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_bs"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list_periode_mingguan"
         android:layout_width="match_parent"
-        android:backgroundTint="@color/old_green"
         android:layout_height="match_parent"
-        android:layout_margin="8dp"
-        android:background="@drawable/shape_layout_corners_with_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                tools:text="@string/nama_desa"
-                android:textColor="@color/black"
-                android:fontFamily="@font/montserrat"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_desc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="@string/malaria_mix"
-                android:layout_marginTop="8dp"
-                android:gravity="center_horizontal"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:fontFamily="@font/montserrat"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/tv_title"
-                app:layout_constraintStart_toStartOf="@+id/tv_title"
-                app:layout_constraintTop_toBottomOf="@+id/tv_title" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/list_item_tambah_data" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
