--- a/app/src/main/res/layout/fragment_recapitulation.xml
+++ b/app/src/main/res/layout/fragment_recapitulation.xml
@@ -23,8 +23,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="4dp"
-                >
+                android:padding="4dp">
 
                 <TextView
                     android:id="@+id/label_periode"
@@ -34,6 +33,7 @@
                     android:text="@string/periode_minggu"
                     android:textColor="@color/black"
                     android:textStyle="bold"
+                    android:padding="4dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -42,7 +42,7 @@
                     android:id="@+id/sp_minggu_recap"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     app:layout_constraintBottom_toBottomOf="@+id/label_periode"
                     app:layout_constraintStart_toEndOf="@+id/label_periode"
                     app:layout_constraintTop_toTopOf="@+id/label_periode" />
@@ -72,6 +72,19 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.card.MaterialCardView>
+
+        <TextView
+            android:id="@+id/tv_data_empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/upss_data_kosong"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
