--- a/app/src/main/res/layout/activity_add_data.xml
+++ b/app/src/main/res/layout/activity_add_data.xml
@@ -107,42 +107,52 @@
         app:layout_constraintStart_toEndOf="@+id/edt_jumlah_pasien"
         app:layout_constraintTop_toTopOf="@+id/edt_jumlah_pasien" />
 
-
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="2dp"
-        android:layout_marginEnd="2dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="2dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_jumlah_pasien">
+        app:layout_constraintTop_toBottomOf="@+id/edt_jumlah_pasien"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/data_terbaru"
-            android:backgroundTint="@color/grey"
-            android:textSize="18sp"
-            android:fontFamily="@font/roboto_regular"
-            android:textStyle="bold"
-            android:textColor="@color/black"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            />
+            android:backgroundTint="@color/grey"
+            android:fontFamily="@font/roboto_regular"
+            android:text="@string/data_terbaru"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_tambah_data"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/grey"
-            tools:listitem="@layout/list_item_tambah_data"
-            />
+            tools:listitem="@layout/list_item_tambah_data" />
 
     </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_delete_all"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="80dp"
+        android:backgroundTint="@color/red"
+        android:src="@drawable/ic_baseline_delete_forever_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
